--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,11 @@
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>OpenCV</depend>
+  <depend>nav_msgs</depend>
+  <depend>rclcpp_action</depend>
+  <depend>nav2_msgs</depend>
 
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
